# Scompiler

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
output/: asm.txt  ast.txt  ir.txt  low_ir.txt  token.txt
src/: main.cpp
src/asm_generator/: asm_generator.cpp  asm_generator.hpp
src/base/: alloc_info.cpp  alloc_info.hpp  ast.hpp  compile_error.hpp  config.cpp  debug.cpp  ir.cpp  ir.hpp  support_type.hpp  symbol_table.hpp  token.cpp  token.hpp  token_stream.cpp  token_stream.hpp  variable.cpp  variable.hpp  visitor.hpp
src/checker/: checker.cpp  checker.hpp
src/lexer/: Token.cpp  Token.hpp  handwritten_lexer.cpp  handwritten_lexer.hpp  lex_error.hpp  lexer.hpp  regex_lexer.cpp  regex_lexer.hpp  spirit_lexer.cpp  spirit_lexer.hpp
src/optimizer/: alloc_info.cpp  alloc_info.hpp  basic_block.cpp  basic_block.hpp  detail_debug.cpp  detail_debug.hpp  function_block.cpp  function_block.hpp  module.cpp  module.hpp  optimizer.cpp  optimizer.hpp
src/parser/: parser.hpp  recursive_descent_parser.cpp  recursive_descent_parser.hpp
src/reg_allocator/: reg_allocator.cpp  reg_allocator.hpp
src/translator/: translator.cpp  translator.hpp
src/util/: config.cpp  config.hpp  debug.cpp  debug.hpp  string_util.hpp
test/: alloc.c  array_test.c  global_var_test.c  hello.c  input.c  lex.c  parse.c  simple.c  step10.c  step11.c  step2.c  step3.c  step6.c  step7.c  step8.c  test1.c
